[gd_scene load_steps=12 format=3 uid="uid://dyqovdfbx4laq"]

[ext_resource type="Script" uid="uid://dq0jo0766a6a1" path="res://hud/hud.gd" id="1_0cv51"]
[ext_resource type="Texture2D" uid="uid://c6ytbvaibnprl" path="res://hud/phone.png" id="2_lo8gu"]
[ext_resource type="PackedScene" uid="uid://drhew4vkvum7f" path="res://hud/stat_bar.tscn" id="3_0cv51"]
[ext_resource type="FontFile" uid="uid://ccinyqano2qsr" path="res://theme/fonts/AlpenFontFree.otf" id="3_svhta"]
[ext_resource type="PackedScene" uid="uid://csxs58i34oxxv" path="res://hud/messages.tscn" id="4_jp2ct"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6x352"]
texture = ExtResource("2_lo8gu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vsxvn"]
texture = ExtResource("2_lo8gu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_psv2s"]
texture = ExtResource("2_lo8gu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e7sel"]
texture = ExtResource("2_lo8gu")

[sub_resource type="FontVariation" id="FontVariation_fjv1a"]
base_font = ExtResource("3_svhta")
spacing_glyph = -2
spacing_top = 5

[sub_resource type="FontVariation" id="FontVariation_0ivg5"]
base_font = ExtResource("3_svhta")
spacing_glyph = -1

[node name="HUD" type="Node2D"]
script = ExtResource("1_0cv51")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="phone" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -158.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_6x352")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vsxvn")
theme_override_styles/hover = SubResource("StyleBoxTexture_psv2s")
theme_override_styles/focus = SubResource("StyleBoxTexture_e7sel")

[node name="dialog_container" type="PanelContainer" parent="CanvasLayer"]
offset_left = 1.0
offset_top = 406.0
offset_right = 288.0
offset_bottom = 499.0

[node name="dialog_panel" type="RichTextLabel" parent="CanvasLayer/dialog_container"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/normal_font = SubResource("FontVariation_fjv1a")
theme_override_font_sizes/normal_font_size = 20
text = "Some dialogue...
a lot of dialogue

"

[node name="lb_instructions" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 410.0
offset_top = 491.0
offset_right = 697.0
offset_bottom = 540.0
theme_override_fonts/normal_font = SubResource("FontVariation_0ivg5")
theme_override_font_sizes/normal_font_size = 20
text = "instructions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="messages" parent="CanvasLayer" instance=ExtResource("4_jp2ct")]
visible = false

[node name="dialog_window" type="ConfirmationDialog" parent="CanvasLayer"]
oversampling_override = 1.0
title = "Title"
initial_position = 4
size = Vector2i(200, 106)
ok_button_text = "Yes"
dialog_text = "Oi"
cancel_button_text = "No"

[node name="stats" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 2.0
offset_top = 508.0
offset_right = 288.0
offset_bottom = 534.0

[node name="needs" type="HBoxContainer" parent="CanvasLayer/stats"]
layout_mode = 2

[node name="sleep_bar" parent="CanvasLayer/stats/needs" instance=ExtResource("3_0cv51")]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
label = "sleep"

[node name="social_bar" parent="CanvasLayer/stats/needs" instance=ExtResource("3_0cv51")]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
label = "social"

[node name="food_bar" parent="CanvasLayer/stats/needs" instance=ExtResource("3_0cv51")]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
label = "food"

[node name="water_bar" parent="CanvasLayer/stats/needs" instance=ExtResource("3_0cv51")]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
label = "water"

[node name="anxiety_bar" parent="CanvasLayer/stats" instance=ExtResource("3_0cv51")]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
label = "anxiety"

[connection signal="pressed" from="CanvasLayer/phone" to="." method="_on_phone_pressed"]
[connection signal="confirmed" from="CanvasLayer/dialog_window" to="." method="_on_dialog_window_confirmed"]
